added dynamic mem sample and modded older projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 /objfundamentals_demo/nbproject/private/
 /objfundamentals_demo/build/Debug/
+/Kennlinien-Ablage/nbproject/private/
+/Kennlinien-Ablage/dist/Debug/
+/Kennlinien-Ablage/build/Debug/
