added LinkedList example

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Kennlinien-Ablage/nbproject/private/
 /Kennlinien-Ablage/dist/Debug/
 /Kennlinien-Ablage/build/Debug/
+/ComputerVerwaltung/nbproject/private/
+/LinkedList/nbproject/private/
+/LinkedList/build/Debug/
