--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /ComputerVerwaltung/nbproject/private/
 /LinkedList/nbproject/private/
 /LinkedList/build/Debug/
+/test/nbproject/private/
+/test/dist/Debug/
