recovery after desaster of lost pqueue.cpp

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-
+*.workspace
+*.tags
+*.mk
+*.session
 /objfundamentals_demo/nbproject/private/
 /objfundamentals_demo/build/Debug/
 /Kennlinien-Ablage/nbproject/private/
